# dev-glow

./: LICENSE
.github/: copilot-instructions.md
.github/instructions/: poc1.instructions.md
product/POC_1/: Cargo.toml  README.md
product/POC_1/docs/: QUICK_REFERENCE.md  USER_GUIDE.md
product/POC_1/glow-cli/: Cargo.toml
product/POC_1/glow-cli/src/: commands.rs  main.rs  output.rs
product/POC_1/glow-cli/tests/: cli_test.rs
product/POC_1/glow-core/: Cargo.toml
product/POC_1/glow-core/schemas/: config.schema.json  mcp_config.schema.json  process_config.schema.json
product/POC_1/glow-core/src/: error.rs  lib.rs
product/POC_1/glow-core/src/config/: loader.rs  mod.rs  schema.rs
product/POC_1/glow-core/src/engine/: context.rs  mod.rs  operations.rs  state.rs  validation.rs
product/POC_1/glow-core/src/model/: link.rs  mod.rs  parameter.rs  process.rs  step.rs
product/POC_1/glow-core/src/quality/: mod.rs
product/POC_1/glow-core/src/storage/: frontmatter.rs  mod.rs  step_files.rs
product/POC_1/glow-core/src/template/: helpers.rs  mod.rs  renderer.rs  subset.rs
product/POC_1/glow-core/tests/: integration_test.rs  scenario_test.rs  valuation_scenario_test.rs
product/POC_1/glow-core/tests/common/: mod.rs
product/POC_1/glow-core/tests/fixtures/: tasktrack_process_config.yaml  valuation_scenario_process_config.yaml
product/POC_1/glow-mcp/: Cargo.toml
product/POC_1/glow-mcp/src/: handlers.rs  main.rs  protocol.rs  resources.rs  tools.rs
product/POC_1/glow-mcp/tests/: mcp_test.rs
rnd/: IDEA.md
rnd/design/POC_1/: design.md  requirements.md  scenario.md
rnd/design/POC_1/scenario/: config.yaml  process_config.yaml
rnd/design/POC_1/schemas/: step_data.schema.json
rnd/research/1-market_competitive_landscape/1/: phase-1-1-competitive-analysis.md  phase-1-1-summary.md
rnd/research/1-market_competitive_landscape/2/: phase-1-2-FINAL-REPORT.md  phase-1-2-interview-framework.md
rnd/research/2-feasibility/: RESEARCH-PLAN-REVIEW.md  new_plan.md  new_plan_original.md  phase-2-feasibility-research-plan_claude.md  phase-2-feasibility-research-plan_gemini.md  phase-2-feasibility-research-plan_gpt.md  phase-2-plan-comparison_and_combination-ds.md  phase-2-plan-comparison_and_combination-gpt.md
rnd/research/2-feasibility/POC_1/: process_model.md
rnd/research/2-feasibility/POC_1/process_model/: definitions.md  enterprise_process_scenario_as_reference.md  process_to_be_vision.md  small_team_scenarios_as_is_analysis.md  solo_dev_scenarios_as_is_analysis.md
rnd/research/research-phase/: DELIVERABLES-SUMMARY.md  PHASE-1-2-START-HERE.md  phase-1-2-internet-research.md  questions.md
source/: README.md
