[package]
name = "glow-cli"
description = "CLI application for dev-glow development process tooling"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "glow"
path = "src/main.rs"

[dependencies]
glow-core = { path = "../glow-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest = { workspace = true }
