[package]
name = "glow-core"
description = "Core library for dev-glow development process tooling"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
handlebars = { workspace = true }
jsonschema = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rstest = { workspace = true }
